# question-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPONENTS.md  CUTTING_EDGE_RESEARCH.md  DECISIONS.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  SETTINGS_MAP.md  config.toml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: inquiry_benchmark.py
docs/: product-analysis-and-competitors.md
genomes/: claim_validator.toml  example_researcher.toml  planner.toml
profiles/default/: identity.md  manifest.yaml  personality.md  strategies.md  tool-policies.md
sdk/ts/: .gitignore  README.md  package.json  tsconfig.json
src/qe/: audit.py  config.py  errors.py
tests/: conftest.py
tests/integration/: conftest.py  test_e2e_slow.py  test_goal_lifecycle.py  test_goal_pipeline_e2e.py  test_hil_e2e.py  test_inquiry_e2e.py  test_investment_e2e.py  test_multi_agent_e2e.py  test_real_llm_inquiry.py  test_researcher.py  test_scout_e2e.py  test_substrate.py  test_webhook_routing.py
tests/unit/: test_a2a_and_guardrails.py  test_api.py  test_arena_models.py  test_bayesian_belief.py  test_benchmark_harness.py  test_bus.py  test_bus_reliability.py  test_bypass_and_patterns.py  test_channel_wiring.py  test_chat.py  test_chat_suggestions.py  test_chat_system_prompt.py  test_cli_commands.py  test_cli_reindex_embeddings.py  test_cognition_models.py  test_cognitive_agent.py  test_cognitive_agent_pool.py  test_competitive_arena.py  test_config_models.py  test_context_compression.py  test_context_curator.py  test_decay_and_drift.py  test_dialectic_engine.py  test_discovery.py  test_doctor.py  test_elastic_scaler.py  test_embeddings.py  test_emergency.py  test_engram_cache.py  (+97 more)
(+282 files in other folders)
